adjusting the trips page

--- a/src/HomescreenComp/TripTab.css
+++ b/src/HomescreenComp/TripTab.css
@@ -1,4 +1,4 @@
 #all-the-trips{
-    display: grid;
-    grid-template-columns: repeat(6, auto);
+    display: flex;
+    flex-direction: column;
 }
