--- a/src/Home.css
+++ b/src/Home.css
@@ -22,14 +22,14 @@
 }
 
 #col-1{
-    flex-grow: 2;
+    flex-grow: 3;
     display: flex;
     flex-direction: column;
     
 }
 
 #col-2{
-    flex-grow: 4;
+    flex-grow: 6;
     padding-left: 10%;
     padding-top: 5%;
     background-color: rgb(136, 167, 255);
@@ -172,7 +172,29 @@
     background-color: rgb(5, 43, 150);
     overflow: auto;
     height: 300px;
+    width: 300px;
     
+}
+
+.patient-list-btns{
+    width: 80%;
+    margin: 2%;
+    margin-left: 50px;
+    height: 50px;
+    text-align: left;
+    border-width: 0px;
+    border-radius: 2px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    color: white;
+    background-color: rgb(66, 106, 216);
+}
+
+.patient-list-btns:hover{
+    width: 40%;
+    color: rgb(15, 15, 15);
+    background-color: rgb(221, 221, 221);
+    transition: ease-in-out 0.7s;
 }
 
 #trip-list{
