--- a/src/Authentication/SignUp.css
+++ b/src/Authentication/SignUp.css
@@ -1,32 +1,29 @@
 .create-top {
-    Background: rgb(66, 106, 216);
+    Background: rgb(59, 59, 59);
     height: 80px;
     display: flex;
-    justify-content: center;
+    justify-content: left;
+    padding-left: 100px;
     align-items: center;
     font-size: 3rem;
     font-weight: 500;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 900;
+    color: white
+}
+
+.create-back{
+    background-color: rgb(59, 59, 59);
 }
 
 .createbox{
-    background-color: rgba(255, 255, 255, 0.897);
+    background-color: transparent;
     font-size: 30px;
-    margin-right: 50%;
-    margin-left: 10%;
-    margin-top: 100px;
-    height: 400px;
-    border-radius: 20px;
+    margin-top: 200px;
+    height: 350px;
+    width: 450px;
     display: flex;
     flex-direction: column;
-    padding: 40px;
-    box-shadow: 20px 20px 10px rgba(0, 0, 0, 0.05);
-}
-
-.create{
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 700;
 }
 
 .name-fields{
@@ -45,78 +42,100 @@
 }
 
 .label{
-    font-weight: 250;
-    font-size: 20px;
-    margin-right: 30px;
-    margin-top: 5px;
+    font-weight: 600;
+    font-size: 15px;
+    margin-right: 20px;
+    margin-top: 10px;
     margin-left: 10px;
+    color: white;
 }
 
 .first-name{
-    border-radius: 5px;
-    margin-bottom: 0px;
-    margin-left: 13px;
-    border-width: 0px;
+    border-radius: 2px;
+    margin-bottom: 10px;
+    margin-left: 17px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(252, 35, 162);
     height: 30px;
-    width: 250px;
+    width: 300px;
     box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.05);
+    background-color: rgb(78, 78, 78);
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .last-name{
-    border-radius: 5px;
-    margin-bottom: 0px;
-    margin-left: 15px;
-    border-width: 0px;
+    border-radius: 2px;
+    margin-bottom: 10px;
+    margin-left: 5px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(252, 35, 162);
     height: 30px;
-    width: 250px;
+    width: 300px;
     box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.05);
+    background-color: rgb(78, 78, 78);
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .email{
-    border-radius: 5px;
-    margin-bottom: 0px;
-    margin-left: 19px;
-    border-width: 0px;
+    border-radius: 2px;
+    margin-bottom: 10px;
+    margin-left: 20px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(252, 35, 162);
     height: 30px;
-    width:518px;
+    width: 500px;
     box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.05);
+    background-color: rgb(78, 78, 78);
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .phone{
-    border-radius: 5px;
-    margin-bottom: 0px;
-    margin-left: 11px;
-    border-width: 0px;
+    border-radius: 2px;
+    margin-bottom: 10px;
+    margin-left: 14px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(252, 35, 162);
     height: 30px;
-    width: 518px;
+    width: 500px;
     box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.05);
+    background-color: rgb(78, 78, 78);
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .license{
-    border-radius: 5px;
-    margin-bottom: 0px;
-    margin-right: 5px;
-    border-width: 0px;
+    border-radius: 2px;
+    margin-bottom: 10px;
+    margin-left: 4px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(252, 35, 162);
     height: 30px;
-    width: 518px;
+    width: 500px;
     box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.05);
+    background-color: rgb(78, 78, 78);
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-.create-back{
-    background-color: rgb(136, 167, 255);
-}
+
 
 .finish-btn{
-    border-radius: 10px;
-    width: 300px;
-    height: 35px;
+    border-radius: 2px;
+    width: 305px;
+    margin-left: 100px;
+    height: 40px;
     border-width: 0px;
-    background: rgb(211, 221, 243) 0%;
     box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.05);
-    font-size: 15px;
-    margin-left: 25px;
-    background-color: rgb(136, 167, 255);
+    background-color: rgb(252, 35, 162);
+
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 17px;
+    font-weight: 900;
+    margin-bottom: 10px;
+    color: white;
 }
 
 .sign-up-footer{
@@ -125,33 +144,34 @@
 }
 
 .back-btn{
-    border-radius: 10px;
-    width: 300px;
-    height: 35px;
+    border-radius: 2px;
+    width: 305px;
+    margin-left: 91px;
+    height: 40px;
     border-width: 0px;
-    background: rgb(211, 221, 243) 0%;
     box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.05);
-    font-size: 15px;
-    margin-left: 5px;
-    background-color: rgb(136, 167, 255);
+    background-color: rgb(252, 35, 162);
+
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 17px;
+    font-weight: 900;
+    margin-bottom: 10px;
+    color: white;
 }
 
 .finish-btn:hover{
-    background-color:rgb(45, 78, 121);
-    border-radius: 15px;
-    transition: all 0.5s ease-in-out;
+    background-color:rgb(255, 68, 177);
+    transition: all 0.3s ease-in-out;
 }
 
 .back-btn:hover{
-    background-color:rgb(45, 78, 121);
-    border-radius: 15px;
-    transition: all 0.5s ease-in-out;
+    background-color:rgb(255, 68, 177);
+    transition: all 0.3s ease-in-out;
 }
 
 .back-txt{
     text-decoration: none;
-    color: black;
+    color: white;
     width: 300px
 }
 
@@ -161,12 +181,16 @@
     font-size: 20px;
     font-weight: 250;
     margin-left: 10px;
-    margin-right: 300px;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    font-weight: 900;
+    
 }
 
 input[type="checkbox"] {
     appearance: none;
-    background-color: #fff;
+    background-color: rgb(78, 78, 78);
     margin: 0;
     font: inherit;
     color: currentColor;
@@ -175,7 +199,10 @@ input[type="checkbox"] {
     border-width: 0px;
     border-radius: 0.15em;
     transform: translateY(-0.075em);
-    margin-top: 20px;
+    margin-top: 15px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(252, 35, 162);
   }
 
   input[type="checkbox"]::before {
