--- a/src/HomescreenComp/About.css
+++ b/src/HomescreenComp/About.css
@@ -21,27 +21,53 @@
     padding-top: 1%;
     padding-left: 15%;
     padding-right: 15%;
-    background-color: rgb(136, 167, 255);
+    background-color: rgb(59, 59, 59);
+    display: flex;
+    flex-direction: row;
+}
+
+.about-us{
+    font-weight: 900;
+    font-size: 60px;
+    text-align: left;
+}
+
+.mission{
+    font-weight: 700;
+    font-size: 20px;
+    text-align: left;
+}
+
+.background{
+    font-weight: 200;
+    font-size: 14px;
+    text-align: left;
+    width: 500px;
+    line-height: 23px;
 }
 
 #team{
     display:flex;
     flex-direction: row;
-    background-color: rgb(136, 167, 255);
+    background-color: rgb(59, 59, 59);
     padding-bottom: 30px;
 }
 
 #team-header{
-    background-color: rgb(136, 167, 255);
+    background-color: rgb(59, 59, 59);
     margin: 0px;
-    text-align: center;
+    text-align: left;
+    padding-left: 275px;
+    font-size: 60px;
     color: white;
     padding-top: 10px;
+    padding-bottom: 15px;
 }
 
 .profile-pic{
     width: 100%;
     padding: 0px;
+    border-bottom: 4px solid rgb(252, 35, 162);
 }
 
 .biography{
@@ -85,20 +111,23 @@
 
 #design-images{
     display:flex;
+    width: 300px;
     flex-direction: row;
-    background-color: rgb(136, 167, 255);
+    background-color: rgb(59, 59, 59);
+    flex-grow: 1;
 }
 
 .design-card{
     background-color: white;
-    margin-left: 10px;
+    margin-left: 100px;
     width: 600px;
     margin-bottom: 20px;
     margin-left: 12%;
-    margin-top: 20px
+    margin-top: 20px;
 }
 
 .product{
     width: 100%;
     flex-grow: 1;
+    border-bottom: 4px solid rgb(252, 35, 162);
 }
