--- a/src/HomescreenComp/Navbar.css
+++ b/src/HomescreenComp/Navbar.css
@@ -1,11 +1,12 @@
 .NavItems {
-    Background: rgb(66, 106, 216);
+    background-color: rgb(59, 59, 59);
     height: 80px;
     display: flex;
     flex-direction: row;
     align-items: center;
     font-size: 1.5rem;
     padding-left: 20px;
+    color: white;
 
 }
 
@@ -21,11 +22,14 @@
 }
 
 .nav-links{
-    color: black;
+    color: white;
     text-decoration: none;
     padding: 0.5rem 1rem;
     font-family: Arial, Helvetica, sans-serif;
-    font-weight: 400;
+    font-weight: 500;
+    font-size: 19px;
+    border-left: 2px solid;
+    padding-left: 50px;
     text-decoration: underline transparent;
     text-underline-offset: 0;
 }
@@ -49,7 +53,7 @@ transform: translate3d(0, 0.2em, 0);
 }
 
 .nav-links:hover{
-    text-decoration: underline black;
+    text-decoration: underline rgb(252, 35, 162);
     transition: all 0.9s ease-in-out;
     text-underline-offset: 0.4rem;
 }
