--- a/src/HomescreenComp/PatientTab.css
+++ b/src/HomescreenComp/PatientTab.css
@@ -4,7 +4,7 @@
 }
 
 #pat-list{
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(59, 59, 59);
     flex-grow: 1;
     height: 80vh;
     width: 40vh;
@@ -13,7 +13,7 @@
 }
 
 #patient-profile{
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(59, 59, 59);
     flex-grow: 6;
     height: 80vh;
     display: flex;
@@ -21,11 +21,11 @@
 }
 
 #prev-trips{
- background-color: rgb(255, 255, 255);
- flex-grow: 1;
- border-width: 1px;
- border-style: solid;
- border-color: black;
+    background-color: rgb(59, 59, 59);
+    flex-grow: 1;
+    border-width: 1px;
+    border-style: solid;
+    border-color: black;
 }
 
 #pat-info{
@@ -39,29 +39,30 @@
 }
 
 #the_patient{
-    background-color: rgb(66, 106, 216);
+    background-color: rgb(41, 41, 41);
     height: 50px;
-    padding-top: 50px;
-    font-size: 25px;
+    padding-top: 20px;
+    font-size: 40px;
     color: white;
-    font-weight: 750;
+    font-weight: 900;
     padding-left: 10px;
 }
 
 
 .info-pat{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 17px;
-    background-color: rgb(66, 106, 216);
+    font-size: 14px;
+    background-color: rgb(41, 41, 41);
     padding-top: 3px;
     padding-bottom: 3px;
     font-weight: 700;
-    padding-left: 10px;
+    padding-left: 15px;
     margin: 0px;
+    color: white;
 }
 
 #med-cond{
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(59, 59, 59);
     flex-grow: 1;
 }
 
@@ -76,7 +77,7 @@
 }
 
 #pat-notes{
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(59, 59, 59);
     flex-grow: 1;
 }
 
@@ -91,21 +92,21 @@
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 20px;
     color: white;
-    background-color: rgb(66, 106, 216);
+    background-color: rgb(41, 41, 41);
+    border-left: 3px solid rgb(252, 35, 162);
 }
 
 .patient-btns:hover{
-    width: 40%;
     color: rgb(15, 15, 15);
     background-color: rgb(221, 221, 221);
     transition: ease-in-out 0.7s;
 }
 
 .note{
-    background-color: rgb(66, 106, 216);
+    background-color: rgb(41, 41, 41);
     color: white;
     padding:10px;
-    width: 500px;
+    width: 520px;
     border-radius: 5px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 400;
@@ -113,13 +114,16 @@
     display: flex;
     flex-direction: row;
     height: 30px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(252, 35, 162);
 }
 
 .condition{
-    background-color: rgb(66, 106, 216);
+    background-color: rgb(41, 41, 41);
     color: white;
     padding:10px;
-    width: 500px;
+    width: 520px;
     height: 30px;
     border-radius: 5px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -127,26 +131,31 @@
     margin-top: 10px;
     display: flex;
     flex-direction: row;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(252, 35, 162);
 }
 
 .add-note{
-    margin-top: 5px;
-    margin-left: 40px;
-    width: 480px;
-    height: 30px;
+    border-radius: 2px;
     margin-bottom: 10px;
-    border-width: 0px;
-    background-color: rgb(66, 106, 216);
-    color: white;
-    border-radius: 5px;
+    margin-left: 40px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(252, 35, 162);
+    height: 30px;
+    width: 500px;
+    box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.05);
+    background-color: rgb(78, 78, 78);
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .add{
-    height: 32px;
+    height: 34px;
     width: 32px;
     border-width: 0px;
-    border-radius: 5px;
-    background-color: rgb(66, 106, 216);
+    border-radius: 2px;
+    background-color: rgb(252, 35, 162);
     color: white;
 }
 
@@ -171,20 +180,18 @@
 }
 
 .delete:hover{
-    background-color: rgb(255, 113, 113);
-    border-color: white;
-    border-width: 2px;
-    transition: ease-in-out 0.7s;
+    background-color: rgb(228, 0, 0);
+    transition: ease-in-out 0.3s;
 }
 
 .add:hover{
-    background-color: rgb(66, 106, 216);
+    background-color: rgb(255, 102, 191);
     transition: ease-in-out 0.7s;
 }
 
 .info-header{
     color: white;
-    background-color: rgb(66, 106, 216);
+    background-color: rgb(41, 41, 41);
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 10px;
