--- a/src/HomescreenComp/footer.css
+++ b/src/HomescreenComp/footer.css
@@ -1,20 +1,43 @@
 #footer-container{
-    Background: rgb(66, 106, 216);
-    height: 10vw;
+    background-color: rgb(59, 59, 59);
+    height: 380px;
     display: flex;
     flex-direction: row;
-    margin-bottom: 0;
+    flex-wrap: wrap;
+}
+
+#facilities{
+    font-size: 55px;
+    font-weight: 900;
+}
+
+#faq{
+    background-color: transparent;
+    margin-top: 37px;
+    font-weight: 600;
+    color: white;
+    text-decoration: none;
+    margin-right: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    flex-grow: 1;
+    border-right: 2px solid rgb(255, 255, 255);
+    padding-right: 20px;
+}
+
+#contact{
+    background-color: transparent;
+    margin-top: 37px;
+    font-weight: 600;
+    color: white;
+    text-decoration: none;
+    margin-right: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    flex-grow: 1;
 }
 
 #support{
     background-color: transparent;
-    flex-grow:1;
-}
-
-#FAQ{
-    background-color: transparent;
-    display: flex;
-    flex-direction: row;
+    text-align: center;
     flex-grow:1;
 }
 
@@ -24,43 +47,37 @@
     text-align: center;
 }
 
-#contact{
-    list-style: none;
-    font-family: Arial, Helvetica, sans-serif;
-    background: transparent;
-}
-
 #loc-details{
     background-color: transparent;
-    font-size: 10px;
+    font-size: 13px;
+    font-weight: 600;
+    color: white;
+    margin-top: 30px;
 }
 
-#faq{
+#ph{
     background-color: transparent;
-    margin-top: 37px;
-    font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
-    flex-grow: 1;
+    font-size: 13px;
+    font-weight: 600;
+    color: white;
+    margin-top: 30px;
 }
 
-.cont-item{
-    background-color: transparent;
-    font-size: 10px;
+#email-us{
+    font-size: 20px;
+    font-weight: 600;
+    background-color: rgb(252, 35, 162);
+    border-width: 0px;
+    border-radius: 2px;
+    color: white;
     padding: 5px;
+    width: 140px;
+    margin-top: 30px;
 }
 
-.gq{
-    font-size: 20px;
-    flex-grow: 1;
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: transparent;
+#email-us:hover{
+    background-color:rgb(255, 68, 177);
+    transition: all 0.3s ease-in-out;
 }
 
-#comp-email{
-    font-size: 20px;
-    font-weight: 300;
-}
 
-#facilities{
-    padding-left: 10px;
-}
