--- a/src/Home.css
+++ b/src/Home.css
@@ -22,6 +22,7 @@
     display: flex;
     flex-direction: column;
     border-right: 1px solid;
+    overflow: auto;
 }
 
 #col-2{
@@ -172,6 +173,7 @@
     display: grid;
     grid-template-columns: repeat(2, auto);
     background-color: rgb(59, 59, 59);
+    overflow: auto;
 }
 
 #view-trip{
