--- a/src/HomescreenComp/About.css
+++ b/src/HomescreenComp/About.css
@@ -24,18 +24,21 @@
     background-color: rgb(59, 59, 59);
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .about-us{
     font-weight: 900;
     font-size: 60px;
     text-align: left;
+    flex-wrap: wrap;
 }
 
 .mission{
     font-weight: 700;
     font-size: 20px;
     text-align: left;
+    flex-wrap: wrap;
 }
 
 .background{
@@ -44,6 +47,7 @@
     text-align: left;
     width: 500px;
     line-height: 23px;
+    flex-wrap: wrap;
 }
 
 #team{
@@ -51,13 +55,14 @@
     flex-direction: row;
     background-color: rgb(59, 59, 59);
     padding-bottom: 30px;
+    flex-wrap: wrap;
 }
 
 #team-header{
     background-color: rgb(59, 59, 59);
     margin: 0px;
     text-align: left;
-    padding-left: 275px;
+    padding-left: 15%;
     font-size: 60px;
     color: white;
     padding-top: 10px;
